# StatSentry

./: .gitignore  CMakeLists.txt  README.md
include/TaskManager/ComputerInfo/: ComputerInfo.h  CpuInfo.h  MemInfo.h
include/TaskManager/Gui/Modules/: CPU.h  Memory.h
include/TaskManager/Util/: Settings.h  util.h
src/: main.cpp
src/ComputerInfo/: ComputerInfo.cpp  CpuInfo.cpp  MemInfo.cpp
src/Gui/Modules/: CPU.cpp  Memory.cpp
src/Util/: Util.cpp
